# gestion_platforme

./: .gitignore  build.sh  db.sqlite3  pyproject.toml  render.yaml  requirements.txt  update_chantiers.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
gestion/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
gestion/migrations/: 0001_initial.py  0002_add_autre_nom_to_poste.py  0003_alter_poste_taux_horaire_alter_recu_numero_recu.py  0004_remove_employe_poste_employe_poste_autre_and_more.py  0005_alter_employe_poste_autre_alter_employe_poste_choice.py  0006_planninghoraire.py  0007_remove_employe_planning.py  0008_planningsimple_delete_planninghoraire.py  0009_notification.py  0010_facture_lignefacture.py
gestion/templatetags/: gestion_extras.py
platforme/: settings.py  urls.py
static/css/: style.css
static/js/: employe_form.js  main.js  notifications.js
templates/: base.html  dashboard.html  login.html
templates/chantiers/: affecter_employe.html  affecter_freelancer.html  ajouter_chantier.html  ajouter_ligne_facture.html  creer_facture.html  detail_chantier.html  detail_facture.html  liste_chantiers.html  supprimer_ligne_facture.html
templates/employees/: ajouter_avance.html  ajouter_employe.html  ajouter_planning.html  ajouter_planning_simple.html  ajouter_semaine_planning.html  detail_employe.html  liste_employes.html  modifier_employe.html  modifier_planning_simple.html  planning_employe.html  planning_simple.html  supprimer_employe.html  supprimer_planning.html  supprimer_planning_simple.html
templates/finance/: dashboard.html  (+5 more)
(+10 files in other folders)
