[tool.poetry]
name = "gestion-platforme"
version = "1.0.0"
description = ""
authors = ["Your Name <email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.2.7"
django-crispy-forms = "2.1"
crispy-bootstrap5 = "2023.10"
Pillow = "10.1.0"
gunicorn = "21.2.0"
psycopg2-binary = "2.9.9"
whitenoise = "6.6.0"
django-widget-tweaks = "1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"